[project]
name = "ece-227-game-theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
